[package]
name = "labirust-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["JOLIMAITRE Matthieu <matthieu@imagevo.fr>"]
description = "A cli to run labirust algorithms."
repository = "https://github.com/MajorBarnulf/labirust/"

[dependencies]
labirust = "0.3"
clap = { version = "3.1", features = ["derive"] }
